# DocRestore

./: .env_example  .gitignore  .pre-commit-config.yaml  LICENSE  README.en.md  README.md  _typos.toml  pyproject.toml
.github/workflows/: frontend-ci.yml
backend/docrestore/: models.py
backend/docrestore/api/: __init__.py  app.py  auth.py  errors.py  routes.py  schemas.py  upload.py
backend/docrestore/llm/: __init__.py  base.py  cache.py  circuit_breaker.py  cloud.py  code_refine.py  local.py  (+1 more)
docs/: README.md  architecture.md  deployment.md  design.md  frontend-design.md  module-design.md  progress.md
docs/backend/: data-models.md  llm.md  privacy.md
docs/en/: README.md  architecture.md  deployment.md
docs/frontend/: features.md  tech-stack.md
docs/modules/: api.md  frontend.md  llm.md  models.md  ocr.md  output.md  pipeline.md  processing.md  result_delivery.md  ws_progress.md
docs/zh/: README.md  deployment.md
frontend/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/tests/: errors.test.ts  markdownRoundtrip.test.ts  setup.ts
scripts/: age50_seed_fixture.py  age8_analyze_line_layout.py  age8_compile_check.py  age8_e2e_check.py  age8_e2e_report.py  age8_probe_basic_ocr.py  age8_probe_block_layout_low_threshold.py  age8_probe_layout.py  age8_probe_ocr.py  age8_probe_vl_no_merge.py  age8_robust_report.py  age8_stub_includes.py  age8_validate_full_dataset.py  analyze_tables.py  bench_compare.py  bench_ocr.py  bench_pipeline_parallel.py  compare_profile.py  compress_for_preview.py  deepseek_ocr_worker.py  gpu_sampler.py  paddle_ocr_worker.py  paddle_sv3_worker.py  preview_ide_columns.py  run_e2e.py  setup.sh  setup_backend.sh  setup_deepseek_ocr.sh  setup_paddle_ocr.sh  start.sh
src/docrestore/: __init__.py  models.py
test_images/dococr_bench/: RESULTS.md
tests/: conftest.py  test_code_restore_config.py  test_config.py  test_integration.py  test_models.py
tests/api/: test_auth.py  test_code_mode_e2e.py  test_create_task_code_mode.py  test_ocr_endpoints.py  test_result_delivery.py  test_routes.py  test_source_images.py  test_task_actions.py  test_task_list.py  test_update_result.py  test_upload.py  test_upload_to_task.py  test_ws_progress.py  test_zip_code_mode.py
tests/llm/: test_adaptive_timeout.py  test_base_semaphore.py  test_cache.py  test_circuit_breaker.py  test_circuit_breaker_integration.py  test_cloud.py  test_cloud_truncation.py  test_code_refine.py  test_doc_boundary.py  test_gap_fill_prompt.py  test_local.py  test_model_normalize.py  test_pii_detect_prompt.py  test_prompts.py  test_segmenter.py
tests/ocr/: __init__.py  test_column_filter.py  test_deepseek_engine.py  test_engine_manager.py  test_mock.py  test_ngram_filter.py  test_paddle_ocr.py  test_preprocessor.py  test_router.py
tests/output/: test_code_renderer.py  test_renderer.py
tests/persistence/: test_database.py
tests/pipeline/: test_age8_e2e.py  test_boundary_gap_combo.py  test_code_pii_header.py  test_concurrent_tasks.py  test_doc_split.py  test_full_chain_mocked.py  test_gap_fill.py  test_get_refiner.py  test_llm_cache_integration.py  test_local_provider_e2e.py  test_local_refiner_integration.py  test_pii_integration.py  test_pipeline.py  test_process_tree.py  test_process_tree_parallel.py  test_profiler.py  test_quality_report.py  test_rate_controller.py  test_scheduler.py  test_selective_rerun.py  test_task_manager.py  test_truncation.py  test_warnings_e2e.py
tests/privacy/: test_patterns.py  test_redactor.py
tests/processing/: test_cleaner.py  test_code_assembly.py  test_code_columns.py  test_code_file_grouping.py  test_dedup.py  test_heading_dedup.py  test_ide_layout.py  test_ide_meta_extract.py  test_ide_ui_strip.py  test_incremental_merger.py  test_markdown_polish.py  test_ocr_postfix.py  test_page_marker_preservation.py  test_segmenter.py  test_stream_segmenter.py  test_table_dedup.py
tests/scripts/: test_age8_compile_check.py  test_age8_compile_classify.py  test_age8_compile_e2e.py  test_age8_stub_includes.py  test_paddle_ocr_worker_dispatch.py
tests/support/: __init__.py  code_ocr_engine.py  ocr_engine.py
tests/utils/: __init__.py  test_paths.py
(+145 files in other folders)
